price in cart when you click BY in card

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -7,7 +7,7 @@
     </p>
     <p>#{{ product.tags }}</p>
     <a href="#" class="btn btn-primary">{{ product.price | currency }}</a>
-    <button class="btn btn-warning">BY</button>
+    <button class="btn btn-warning" (click)="byProduct(product)">BY</button>
   </div>
 </div>
 
