--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <button class="btn btn-info">HOME</button>
 
 <a class="btn btn-danger" routerLink="/cart">
-  <span>Cart</span>
-  <span></span>
+  <span>Cart </span>
+  <span>{{ totalPriceInCart | currency }}</span>
 </a>
 
 <!-- <a class="btn btn-info" routeLink="/cart"> 
