Product component works. When you click on description, it navigate to product component and you can see the picture and description of the product.

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,26 +1,22 @@
 <div class="card col-md-3 col-sm-3 col-lg-3 col-xl-4" style="width: 18rem;">
-  <img src="{{ product.picture }}" class="card-img-top" alt="..." />
+  <img [src]="product.picture" class="card-img-top" alt="..." />
   <div class="card-body">
     <h5 class="card-title">{{ product.name }}</h5>
-    <p class="card-text" style="display: block">
+    <p
+      class="card-text"
+      style="display: block"
+      [routerLink]="['/product/', product.id]"
+    >
       {{ product.description }}
     </p>
     <p>#{{ product.tags }}</p>
-    <a href="#" class="btn btn-primary">{{ product.price | currency }}</a>
+    <button class="btn btn-primary">{{ product.price | currency }}</button>
     <button class="btn btn-warning" (click)="byProduct(product)">BY</button>
   </div>
 </div>
 
-<!-- <a href="#" class="btn btn-primary">{{ product.price | shortDesc: 60:true }}</a> 
-  write your own pipe
+<!--bind instead of interpolation
+  [src] = "product.picture"
+  src = "{{product.picture}}"
+  In this case it is ok src = "{{product.picture | async}}"
 -->
-
-<!-- function shortDesc(value, length,isShort){
-  
-  if(isShort){
-    return value.shortened(0,length)
-  }
-  else{
-    return value
-  }
-} -->
