--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,6 @@
-<button class="btn btn-info">HOME</button>
+<button class="btn btn-info" routerLink="/home">HOME</button>
 
 <a class="btn btn-danger" routerLink="/cart">
   <span>Cart </span>
   <span>{{ totalPriceInCart | currency }}</span>
 </a>
-
-<!-- <a class="btn btn-info" routeLink="/cart"> 
-    cart is url which navigate to component card 
-  <span>Cart</span>
-  <span>0</span>
-</a> -->
